added register form

--- a/src/static/js/App.css
+++ b/src/static/js/App.css
@@ -1,4 +1,4 @@
-.App {
+.Form {
     text-align: left;
     padding: 1em;
     margin: 1em;
@@ -11,6 +11,3 @@
     margin-top: 100px;
   }
   
-  .form {
-    padding: 1em;
-  }
